<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            style="@style/Logo"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/til_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_35"
            android:contentDescription="@string/login_image"
            android:src="@drawable/login_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:fontFamily="@font/bold"
            android:letterSpacing="0.025"
            android:text="@string/welcome_back"
            android:textColor="@color/mainblack"
            android:textSize="@dimen/font_26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login_image" />


        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:fontFamily="@font/semibold"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@id/til_email"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_35"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_22"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/extrabold"
            android:text="@string/login"
            android:textColor="@color/semiwhite"
            android:textSize="@dimen/font_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/register_here"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>