<resources>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2_items">(2 items)</string>
    <string name="add_item">+</string>
    <string name="add_new_address">Add new address</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="address">Address</string>
    <string name="address_detail">Address Detail</string>
    <string name="address_label">Address Label</string>
    <string name="address_resto">Alam Sutera, Jl. Jalur Sutera Bar. No.Kav. 7–9</string>
    <string name="alfaresto">AlfaResto</string>
    <string name="alfaresto_logo">Alfaresto Logo</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="app_name">AlfaResto-CustomersApp</string>
    <string name="apa">apa</string>
    <string name="back_logo">Back Logo</string>
    <string name="cartlogo">cartLogo</string>
    <string name="checkout">Checkout Order</string>
    <string name="cod">COD</string>
    <string name="delivered">Your order has arrived, Thank you for using AlfaResto</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_in">Delivery In</string>
    <string name="dialog_for_enable_gps_message">Your GPS seems to be disabled. Do you want to enable it?</string>
    <string name="dialog_for_permission_message">This app requires location permissions for the apps to work</string>
    <string name="dialog_for_permission_message_notification">This app requires notification permissions for the apps to work</string>
    <string name="direct_to_login">Already have an account? Login here</string>
    <string name="driver">Driver</string>
    <string name="dummy_address">Alam Sutera, Jl. Jalur Sutera Bar. No.Kav. 7–9, RT.003/RW.006, Panunggangan Tim., Kec. Pinang, Kota Tangerang, Banten 15143</string>
    <string name="email">Email</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="email_pass_empty">Email or password is empty</string>
    <string name="email_resto">alfaresto@gmail.com</string>
    <string name="focus_button">Focus Button</string>
    <string name="food_description">Food Description</string>
    <string name="food_desc_title">Description</string>
    <string name="food_name">Soft Shell Taco</string>
    <string name="food_price">Rp 50.000,-</string>
    <string name="gopay">GOPAY</string>
    <string name="go_back_to_main_menu">Go back to main menu</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="greetings">Hi, %1$s</string>
    <string name="guest">Guest</string>
    <string name="hello">Hello,</string>
    <string name="hi_user">Hi, User!</string>
    <string name="icon_proceed">Icon_Proceed</string>
    <string name="latest">Latest</string>
    <string name="list_all_menu">List All Menu</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_image">Login Image</string>
    <string name="login_success">Login Success</string>
    <string name="logout_logo">Logout Logo</string>
    <string name="marker">marker</string>
    <string name="me">Me</string>
    <string name="menu_image">menu image</string>
    <string name="menu_image_view">menuImageView</string>
    <string name="message_hint">Type a message</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="message_cannot_empty">Message cannot be empty</string>
    <string name="order_id_missing">"Order Id is missing</string>
    <string name="order_success">Order Success!</string>
    <string name="order_failed">Order Failed…</string>
    <string name="please_wait_order">Please wait for your order</string>
    <string name="menu_not_available">Menu is not available</string>
    <string name="oldest">Oldest</string>
    <string name="on_delivery_status">On Delivery</string>
    <string name="delivered_status">Delivered</string>
    <string name="on_delivery">Your order is currently on delivery, track the driver in App</string>
    <string name="order_notif_cancelled">Looks like we have some problem, sorry we must cancel your order 🥲</string>
    <string name="on_process">Your order is currently on process, waiting for Admin to accept…</string>
    <string name="on_process_status">On Process</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_history">Order History</string>
    <string name="order_id_1234567890">Order ID: 1234567890</string>
    <string name="order_status">Order Status</string>
    <string name="password">Password</string>
    <string name="password_not_match">Password is not match</string>
    <string name="password_not_valid">Password is not valid</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_resto">81234499999</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="red_n_hot_taco">Red n Hot Taco</string>
    <string name="register">Register</string>
    <string name="register_failed">Register Failed. This email is already used.</string>
    <string name="register_here">Register here</string>
    <string name="register_success">Register Success</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="remove_item">-</string>
    <string name="resto">Resto</string>
    <string name="rp_112_000">Rp 112.000,-</string>
    <string name="rp_50_000">Rp 50.000,-</string>
    <string name="save">Save</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="soft_shell_taco">Soft Shell Taco</string>
    <string name="spicy_chicken_beef">Spicy chicken, beef</string>
    <string name="splash_screen_description">Splash Screen</string>
    <string name="strip">-</string>
    <string name="tempat_kerja">Tempat Kerja</string>
    <string name="total">Total Price : </string>
    <string name="user_email">User Email</string>
    <string name="we_re_sorry_we_need_your_location_permission_to_use_this_app">We\'re sorry we need location permission for this app</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="yes">Yes</string>
    <string name="your_driver_is_on_the_way">your driver is on the way</string>
    <string name="track_order">Track Order</string>
    <string name="permission_required">Permission Required</string>
    <string name="chat">Chat</string>
    <string name="available">Available</string>
    <string name="retry">Retry</string>
    <string name="on_delivery_text">On Delivery</string>
    <string name="delivered_text">Delivered</string>
    <string name="failed_checkout_insufficient_field">Checkout Failed, make sure to fill the needed fields</string>
    <string name="failed_create_address">Failed, make sure to fill the needed fields</string>
    <string name="too_far_address">Sorry, the designated place is too far…</string>
    <string name="failed_checkout_problems">Failed, there are problems processing your orders…</string>
    <string name="failed_checkout_no_stock">Failed, one of the menu is out of stocks…</string>
    <string name="date">Date</string>
    <string name="new_address_success">Address added successfully</string>
    <string name="order_id">Order ID :</string>
    <string name="ordered_at">Ordered at :</string>
    <string name="items">" items"</string>
    <string name="status">STATUS</string>
    <string name="new_menu">New Menu</string>
    <string name="alfa_resto">Alfa Resto</string>
    <string name="checkout_confirmation">Checkout Order</string>
    <string name="checkout_confirmation_message">Do you want to continue checkout process?</string>
    <string name="complain_text">Any issue? Complaint here.</string>
    <string name="complain">Complain</string>
    <string name="restaurant_closed">Alfa Resto is closed</string>
    <string name="logout_confirmation_title">Logout confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Cancelled</string>
    <string name="no_internet">No internet, please check your connection</string>
    <string name="no_address">No addresses found…</string>
    <string name="no_order_history">Order History Loaded. There\'s no order history.</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="your_internet_connection_is_currently_not_available_please_check_or_try_again">Your internet connection is currently not available please check or try again.</string>
    <string name="try_again">Try again</string>
    <string name="notes_hint">Add special instructions for your order</string>
    <string name="notes">Order Notes :</string>
    <string name="stock_not_enough">One or more items in your cart are out of stock. Please adjust the quantities.</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="reach_max_stock">You have reached max item stocks</string>
    <string name="items_not_available">Some items are not available</string>
    <string name="item_not_available">%s: available %d out of %d\n</string>
    <string name="choose_address">Choose Address</string>
    <string name="image">image</string>
    <string name="no_history_yet">No history yet</string>
    <string name="hit_the_orange_cart_to_create_an_order">Hit the orange cart to create an order</string>
    <string name="start_chat_with_resto">Start chat with Resto!</string>
    <string name="no_chat">There\'s no chat with Resto\nStart chatting now!</string>
</resources>