<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.components.restoPage.RestoFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_4"
        android:fontFamily="@font/bold"
        android:text="@string/hi_user"
        android:textSize="@dimen/font_20"
        app:layout_constraintEnd_toStartOf="@id/toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_best_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/new_menu"
        android:textSize="@dimen/font_20"
        app:layout_constraintBottom_toTopOf="@+id/rv_menu"
        app:layout_constraintStart_toStartOf="@+id/tv_greetings" />

    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_none"
        android:layout_marginVertical="@dimen/dimen_50"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_all_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_greetings"
        app:layout_constraintTop_toBottomOf="@+id/tv_greetings"
        tools:listitem="@layout/menu_item" />

    <Button
        android:id="@+id/btn_all_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/list_all_menu"
        app:layout_constraintBottom_toBottomOf="@+id/rl_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_cart"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cartlogo"
            android:src="@drawable/ic_cart" />

        <TextView
            android:id="@+id/tv_cart_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn_cart"
            android:layout_alignEnd="@id/btn_cart"
            android:background="@drawable/badge_circle"
            android:paddingHorizontal="@dimen/dimen_10"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>