...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dimen_12">

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_logo"
            android:src="@drawable/ic_logout" />

...
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_logo"
            android:src="@drawable/ic_back"
...
